--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-5 [【CDT周报】第十一期：一个“忠诚的民族主义者”终于变成了“反华女魔头”](/articles/cdt/384113.md)
+
 4-5 [我是颜小乙  | 武汉大暴雨，32万人挤满陵园：人群散去，他们哭了](/articles/cdt/384115.md)
 
 4-5 [春草微视 | 对不起，您拜访的墓地已欠费](/articles/cdt/384117.md)
@@ -598,6 +600,4 @@
 2-22 [鱼眼观察｜教师“越级报警”丢饭碗，真相到底是什么？](/articles/cdt/385711.md)
 
 2-22 [苹果日报｜长平：十年前的「中国茉莉花革命」](/articles/cdt/385713.md)
-
-2-22 [微路况 | 湖南养老院暴雷后，老人们决定偷偷死去](/articles/cdt/385714.md)
 
