--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-5 [埃及木乃伊大游行](/articles/dw/1043149.md)
+
 4-5 [澳智库：中国运用西方社媒做新疆大外宣](/articles/dw/1043150.md)
 
 4-5 [缅甸示威者发动复活节示威 军方持续暴力镇压](/articles/dw/1043151.md)
@@ -598,6 +600,4 @@
 3-18 [法国外交部：参议员有权同任何人会晤](/articles/dw/1043447.md)
 
 3-18 [亚裔遇害案:警方发言人疑有种族主义言论](/articles/dw/1043448.md)
-
-3-18 [拜登称普京是“杀人犯” 莫斯科怒了](/articles/dw/1043449.md)
 
