--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-5 [内外交困下 中国科技巨头转往新加坡扩展业务](/articles/voa/1041738.md)
+
 4-5 [不顾军警镇压 缅甸民众继续示威 推进“春季革命”](/articles/voa/1041739.md)
 
 4-5 [美高教费用难负荷 国际学生盼纾困金](/articles/voa/1041740.md)
@@ -598,6 +600,4 @@
 3-24 [拜登希望达成巨额基础设施建设开支协议](/articles/voa/1042036.md)
 
 3-24 [美中阿拉斯加会谈后，专家称北京或因失分加大对台施压](/articles/voa/1042037.md)
-
-3-24 [欧洲国家召见中国大使，反对北京的制裁](/articles/voa/1042038.md)
 
