--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-5 [中共中央下令赵紫阳家属搬离故居](/articles/rfa/1045962.md)
+
+4-5 [民众注射疫苗送鸡蛋面粉  拒绝者影响今后子女上学](/articles/rfa/1045963.md)
+
 4-5 [台湾73年最惨重火车意外   交通部长引咎请辞](/articles/rfa/1045964.md)
 
 4-3 [强调新疆“恐怖分子罪行” 北京阻外媒赴疆调查](/articles/rfa/1045965.md)
@@ -596,8 +600,4 @@
 3-2 [孟晚舟引渡案开庭  辩方提四大论述 检方严阵以待](/articles/rfa/1046260.md)
 
 3-2 [香港47人被控颠复国家政权  欧美谴责国安法已成消除政治异己工具](/articles/rfa/1046261.md)
-
-3-2 [中共政权受害者联盟在澳洲成立](/articles/rfa/1046262.md)
-
-3-2 [千亿半导体计划成泡影  武汉弘芯遣散员工](/articles/rfa/1046263.md)
 
