--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,11 +1,13 @@
 中国数字时代
 ------
 
+4-5 [【网络民议】国家越高，人民越低，这就是所谓“高人一等的国家”](/articles/cdt/384102.md)
+
 4-5 [【麻辣总局】对日本动画“先审后播”是不够的 应该改为“先死后播”](/articles/cdt/384106.md)
 
 4-5 [【CDT周报】第十一期：一个“忠诚的民族主义者”终于变成了“反华女魔头”](/articles/cdt/384113.md)
 
-4-5 [我是颜小乙  | 武汉大暴雨，32万人挤满陵园：人群散去，他们哭了](/articles/cdt/384115.md)
+4-5 [【404文库】我是颜小乙  | 武汉大暴雨，32万人挤满陵园：人群散去，他们哭了](/articles/cdt/384115.md)
 
 4-5 [春草微视 | 对不起，您拜访的墓地已欠费](/articles/cdt/384117.md)
 
@@ -598,6 +600,4 @@
 2-23 [【异闻观止】澎湃新闻 | 三天内，7人因诋毁戍边英雄被拘](/articles/cdt/385703.md)
 
 2-22 [【立此存照】微博热文《那个坐在阳台上敲锣鸣病的人》作者被判刑半年](/articles/cdt/385707.md)
-
-2-22 [鱼眼观察｜教师“越级报警”丢饭碗，真相到底是什么？](/articles/cdt/385711.md)
 
