--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-5 [习近平口头上慰问台湾    却派军机战舰扰台](/articles/rfa/1045961.md)
+
 4-5 [中共中央下令赵紫阳家属搬离故居](/articles/rfa/1045962.md)
 
 4-5 [民众注射疫苗送鸡蛋面粉  拒绝者影响今后子女上学](/articles/rfa/1045963.md)
@@ -598,6 +600,4 @@
 3-2 [新法定旧罪    “辣笔小球”被批捕](/articles/rfa/1046259.md)
 
 3-2 [孟晚舟引渡案开庭  辩方提四大论述 检方严阵以待](/articles/rfa/1046260.md)
-
-3-2 [香港47人被控颠复国家政权  欧美谴责国安法已成消除政治异己工具](/articles/rfa/1046261.md)
 
