--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+4-5 [中国国务委员王毅再谈中美关系：中方对话大门随时敞开 不认可有高人一等国家](/articles/reuters/1039739.md)
+
 4-5 [汇市一周综述：美元看多情绪稳固 欧洲抗疫不力让欧元吃苦头](/articles/reuters/1039740.md)
 
 4-5 [美国总统拜登将推进2万亿美元基建计划 即使达不成两党协议--能源部长](/articles/reuters/1039741.md)
@@ -598,6 +600,4 @@
 3-26 [中美强劲需求带动德国制造业“爆炸式增长”--Ifo经济学家](/articles/reuters/1040037.md)
 
 3-26 [苏伊士运河管理局期待与美国合作 共同解决货轮搁浅问题](/articles/reuters/1040038.md)
-
-3-26 [中国2020年经常帐顺差2,740亿美元 储备资产增加280亿美元](/articles/reuters/1040039.md)
 
