--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-5 [一波未平一波又起 越南网友声称抵制H&M](/articles/dw/1043146.md)
+
+4-5 [太鲁阁事故：交通部长请辞 行车安全再成焦点](/articles/dw/1043147.md)
+
 4-5 [应对中国挑战，澳大利亚通过学术自由新法律](/articles/dw/1043148.md)
 
 4-5 [埃及木乃伊大游行](/articles/dw/1043149.md)
@@ -596,8 +600,4 @@
 3-18 [北京判断「东升西降」? 美中会谈硬碰硬](/articles/dw/1043444.md)
 
 3-18 [迈克尔、康明凯即将在中国法庭受审](/articles/dw/1043445.md)
-
-3-18 [中美关系中的摩擦点](/articles/dw/1043446.md)
-
-3-18 [法国外交部：参议员有权同任何人会晤](/articles/dw/1043447.md)
 
