--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-5 [港府考虑限制“投白票” 全方位封杀表抗议民意？](/articles/voa/1041735.md)
+
+4-5 [中国兵器集团前董事长尹家绪被调查，军工央企三大员前赴后继](/articles/voa/1041736.md)
+
 4-5 [中国远洋渔船过度捕捞 美国考虑结盟南美国家升级抵制](/articles/voa/1041737.md)
 
 4-5 [内外交困下 中国科技巨头转往新加坡扩展业务](/articles/voa/1041738.md)
@@ -596,8 +600,4 @@
 3-24 [时事大家谈: “中国人不吃这一套”给美中关系带来什么启示？](/articles/voa/1042033.md)
 
 3-24 [VOA连线(许湘筠): 科罗拉多枪击案嫌疑人被控十项一级谋杀罪](/articles/voa/1042034.md)
-
-3-24 [报道：朝鲜发射了短程导弹](/articles/voa/1042035.md)
-
-3-24 [拜登希望达成巨额基础设施建设开支协议](/articles/voa/1042036.md)
 
