--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+4-6 [菲律宾总统府就中国船只入侵向北京发出严厉警告](/articles/voa/1041729.md)
+
+4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041730.md)
+
+4-5 [中国军机连续3天扰台 其中1架次侵入台东南空域](/articles/voa/1041731.md)
+
+4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041732.md)
+
+4-5 [外交、金援双管齐下 中国拉拢东南亚回击美国](/articles/voa/1041733.md)
+
 4-5 [中国新冠病毒疫情出现反复 当局大力推广国产疫苗接种](/articles/voa/1041734.md)
 
 4-5 [港府考虑限制“投白票” 全方位封杀表抗议民意？](/articles/voa/1041735.md)
@@ -590,14 +600,4 @@
 3-24 [朝鲜进行2021年首次导弹发射](/articles/voa/1042027.md)
 
 3-24 [谴责中共:美两党参议员同天分别提出有关新疆和香港的决议](/articles/voa/1042028.md)
-
-3-24 [昂山素季的律师：她可能遭受闭门审判和长期监禁](/articles/voa/1042029.md)
-
-3-24 [白宫要义: 拜登称科州枪击殉难警察为英雄，呼吁参议院通过枪枝法案](/articles/voa/1042030.md)
-
-3-24 [从特朗普到拜登 美国的施压行动掐断华为发展](/articles/voa/1042031.md)
-
-3-24 [拜登政府专注边境未成年移民收容问题](/articles/voa/1042032.md)
-
-3-24 [时事大家谈: “中国人不吃这一套”给美中关系带来什么启示？](/articles/voa/1042033.md)
 
