--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-6 [时事大家谈: 中国的疫苗焦虑：“体制优势”能否笑到最后？](/articles/voa/1041726.md)
+
+4-6 [专家称脸书超5亿用户资料被泄露 中国67万多用户受影响](/articles/voa/1041727.md)
+
+4-6 [德日将举行首次2+2对话，联手遏制中国](/articles/voa/1041728.md)
+
 4-6 [菲律宾总统府就中国船只入侵向北京发出严厉警告](/articles/voa/1041729.md)
 
 4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041730.md)
@@ -594,10 +600,4 @@
 3-24 [北约秘书长：北约团结一致完全有能力应对中国的崛起和挑战](/articles/voa/1042024.md)
 
 3-24 [“北京在缓慢摧毁维吾尔民族” 新疆出生率暴跌的背后](/articles/voa/1042025.md)
-
-3-24 [中国何时攻台？美印太司令人选：威胁比想象中更接近](/articles/voa/1042026.md)
-
-3-24 [朝鲜进行2021年首次导弹发射](/articles/voa/1042027.md)
-
-3-24 [谴责中共:美两党参议员同天分别提出有关新疆和香港的决议](/articles/voa/1042028.md)
 
