--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-6 [大午律师团十问十答：有可能人为拔高为涉黑涉恶](/articles/rfa/1045956.md)
+
 4-6 [中国垄断稀土开采引发格陵兰大选争议](/articles/rfa/1045957.md)
 
 4-6 [加拿大检测中国KN95口罩   多数不合格引发忧虑](/articles/rfa/1045958.md)
@@ -598,6 +600,4 @@
 3-2 [香港228事件：为改革选举制度做准备？](/articles/rfa/1046254.md)
 
 3-2 [【港版美丽岛】缅港抗争互相呼应　「奶茶联盟」遍地开花](/articles/rfa/1046255.md)
-
-3-2 [高福、钟南山吁合作溯源  美专家强调数据共享](/articles/rfa/1046256.md)
 
