--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-6 [核协议会谈将开 伊朗促欧洲对美施压以取消制裁 – 法国国际广播电台 - RFI](/articles/rfi/1032383.md)
+
 4-6 [运河计画遭批评 土耳其总统指退役将领暗示政变 – 法国国际广播电台 - RFI](/articles/rfi/1032384.md)
 
 4-5 [孟加拉渡轮船难  已知26人死亡 – 法国国际广播电台 - RFI](/articles/rfi/1032385.md)
@@ -598,6 +600,4 @@
 3-27 [德国队中场战将满满 勒夫最甜蜜负荷 – 法国国际广播电台 - RFI](/articles/rfi/1032681.md)
 
 3-27 [中国如何掌控香港 - 法国报纸摘要](/articles/rfi/1032682.md)
-
-3-27 [香港去年透过电子转账移走436亿加拿大元](/articles/rfi/1032683.md)
 
