--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-6 [中国“渔船”赖着不走    菲律宾八点声明谴责](/articles/rfa/1045953.md)
+
+4-6 [人权组织发起“为西藏发推”   反制中共大外宣](/articles/rfa/1045954.md)
+
+4-6 [“开胸验肺”黑幕曝光：前市委书记受贿四十万](/articles/rfa/1045955.md)
+
 4-6 [大午律师团十问十答：有可能人为拔高为涉黑涉恶](/articles/rfa/1045956.md)
 
 4-6 [中国垄断稀土开采引发格陵兰大选争议](/articles/rfa/1045957.md)
@@ -594,10 +600,4 @@
 3-2 [中国律师 : 香港法庭审讯过程大陆化](/articles/rfa/1046251.md)
 
 3-2 [专访：中国留学生撑香港遭死亡威胁 用法律自卫](/articles/rfa/1046252.md)
-
-3-2 [「港版美丽岛」首日通宵审讯　夏宝龙点名黎智英、戴耀廷、黄之锋](/articles/rfa/1046253.md)
-
-3-2 [香港228事件：为改革选举制度做准备？](/articles/rfa/1046254.md)
-
-3-2 [【港版美丽岛】缅港抗争互相呼应　「奶茶联盟」遍地开花](/articles/rfa/1046255.md)
 
