--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-6 [宫内调停后 约旦国王与前王储紧张关系据报有所缓解](/articles/voa/1041721.md)
+
+4-6 [专访美宗教自由委员会副主席伯金斯：无惧北京制裁，继续为中国人民发声](/articles/voa/1041722.md)
+
 4-6 [澳新任防长说要与美国、中国合作，确保地区和平](/articles/voa/1041723.md)
 
 4-6 [新冠疫情迫使白宫复活节滚彩蛋活动连续第二年被取消](/articles/voa/1041724.md)
@@ -596,8 +600,4 @@
 3-24 [美众议院议长佩洛西就国际社会对中国迫害新疆维吾尔人实施制裁发表声明](/articles/voa/1042019.md)
 
 3-24 [港府宣布暂停接种复必泰疫苗](/articles/voa/1042020.md)
-
-3-24 [“中国人不吃这一套”，分析：用江湖语言鼓动民粹主义](/articles/voa/1042021.md)
-
-3-24 [“中国人不吃这一套”引发民族主义情绪和网红商品](/articles/voa/1042022.md)
 
