--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+4-6 [互联网“提费降速”为什么会是拜登就业岗位刺激计划的核心一环](/articles/ft/1045798.md)
+
+4-6 [中概股的交易所风云](/articles/ft/1045799.md)
+
 4-2 [台湾列车脱轨 造成数十人死亡](/articles/ft/1045800.md)
 
 4-2 [美房地产经纪公司Compass上市首日上涨](/articles/ft/1045801.md)
@@ -596,8 +600,4 @@
 2-8 [尼日利亚籍WTO总干事人选获美国支持](/articles/ft/1046096.md)
 
 2-7 [全球应合作让疫苗跑赢病毒突变](/articles/ft/1046097.md)
-
-2-7 [缅甸数千民众聚集抗议军政府](/articles/ft/1046098.md)
-
-2-7 [“他们正把羊群引向屠宰场”](/articles/ft/1046099.md)
 
