--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-6 [COVID-19疫情延烧 北韩：不出席东京奥运 – 法国国际广播电台 - RFI](/articles/rfi/1032381.md)
+
 4-6 [美股上扬 道指和标普创新高 – 法国国际广播电台 - RFI](/articles/rfi/1032382.md)
 
 4-6 [核协议会谈将开 伊朗促欧洲对美施压以取消制裁 – 法国国际广播电台 - RFI](/articles/rfi/1032383.md)
@@ -598,6 +600,4 @@
 3-27 [埃及大楼倒塌 造成5死24伤 – 法国国际广播电台 - RFI](/articles/rfi/1032679.md)
 
 3-27 [北部城镇遇叛军攻击 莫三比克180多人受困饭店 – 法国国际广播电台 - RFI](/articles/rfi/1032680.md)
-
-3-27 [德国队中场战将满满 勒夫最甜蜜负荷 – 法国国际广播电台 - RFI](/articles/rfi/1032681.md)
 
