--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-6 [新一波纪录片为性侵犯幸存者发声](/articles/voa/1041716.md)
+
+4-6 [拜登两万亿基础设施建设提案面临挑战](/articles/voa/1041717.md)
+
+4-6 [中国效仿克里姆林宫的“信息战”手法](/articles/voa/1041718.md)
+
 4-6 [反亚裔事件增多，亚裔美国人仍不愿举报](/articles/voa/1041719.md)
 
 4-6 [中共势力威胁台湾新闻自由，台湾政府开始反击](/articles/voa/1041720.md)
@@ -594,10 +600,4 @@
 3-25 [反美和反西方继续驱动俄中走近](/articles/voa/1042014.md)
 
 3-24 [台湾政府拟资助友邦购买非中国产疫苗](/articles/voa/1042015.md)
-
-3-24 [美国贸易代表与日法等国官员对话 讨论中国贸易行为和人权等问题](/articles/voa/1042016.md)
-
-3-24 [当局正调查科罗拉多州枪击案被控男子的背景](/articles/voa/1042017.md)
-
-3-24 [为避免流血事件 缅甸人发起无声罢工的反政变抗议活动](/articles/voa/1042018.md)
 
