--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-6 [《哥斯拉大战金刚》为好莱坞带来希望](/articles/ft/1045797.md)
+
 4-6 [互联网“提费降速”为什么会是拜登就业岗位刺激计划的核心一环](/articles/ft/1045798.md)
 
 4-6 [中概股的交易所风云](/articles/ft/1045799.md)
@@ -598,6 +600,4 @@
 2-8 [疫情叠加“春运”，是否会影响经济复苏？](/articles/ft/1046095.md)
 
 2-8 [尼日利亚籍WTO总干事人选获美国支持](/articles/ft/1046096.md)
-
-2-7 [全球应合作让疫苗跑赢病毒突变](/articles/ft/1046097.md)
 
