--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-6 [科技公司扫除虚假信息面临两难](/articles/voa/1041715.md)
+
 4-6 [新一波纪录片为性侵犯幸存者发声](/articles/voa/1041716.md)
 
 4-6 [拜登两万亿基础设施建设提案面临挑战](/articles/voa/1041717.md)
@@ -598,6 +600,4 @@
 3-25 [种族灭绝等同纳粹遭西方”围殴“，价值观高于商业利益](/articles/voa/1042013.md)
 
 3-25 [反美和反西方继续驱动俄中走近](/articles/voa/1042014.md)
-
-3-24 [台湾政府拟资助友邦购买非中国产疫苗](/articles/voa/1042015.md)
 
