--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-6 [中国在争议水域部署大量船只，加强对南海控制](/articles/nyt/1047001.md)
+
+4-6 [中国推出新疆歌舞片，反击国际批评](/articles/nyt/1047002.md)
+
 4-6 [中国出台新规，限制外资银行在华开展业务](/articles/nyt/1047003.md)
 
 4-6 [简报：中国对外资银行设限；中国推出歌舞片维护新疆政策](/articles/nyt/1047004.md)
@@ -596,8 +600,4 @@
 1-15 [被社交平台封杀的特朗普在中国找到支持者](/articles/nyt/1047299.md)
 
 1-15 [关于总统就职日，你需要知道的七个关键问题](/articles/nyt/1047300.md)
-
-1-15 [豪宅、艺术课和包场购物：孟晚舟在加拿大生活状态曝光](/articles/nyt/1047301.md)
-
-1-15 [WHO病毒溯源团队抵达武汉，或面临重重困难](/articles/nyt/1047302.md)
 
