--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-6 [称要保护运动员健康 朝鲜宣布不参加东京奥运会](/articles/voa/1041713.md)
+
 4-6 [中国海军：航母编队在台湾周边训练将会常态化](/articles/voa/1041714.md)
 
 4-6 [科技公司扫除虚假信息面临两难](/articles/voa/1041715.md)
@@ -598,6 +600,4 @@
 3-25 [香港电台编导蔡玉玲报道7-21事件被控虚假陈述开审 法官押后4月底裁决](/articles/voa/1042011.md)
 
 3-25 [马云过后是化腾？ 传腾讯老板本月与中国反垄断官员面谈](/articles/voa/1042012.md)
-
-3-25 [种族灭绝等同纳粹遭西方”围殴“，价值观高于商业利益](/articles/voa/1042013.md)
 
