--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-6 [国际新闻界｜“春天的花开秋天的风”：社交媒体、集体悼念与延展性情感空间 ——以李文亮微博评论（2020-2021）为例的计算传播分析](/articles/cdt/384088.md)
+
+4-6 [【立此存照】教育部发文！12种类型的读物禁止进入校园](/articles/cdt/384089.md)
+
 4-6 [【CDTV】一位在职民警的遗言：这是我第一次发视频 也可能是最后一次](/articles/cdt/384094.md)
 
 4-5 [【网络民议】国家越高，人民越低，这就是所谓“高人一等的国家”](/articles/cdt/384102.md)
@@ -596,8 +600,4 @@
 2-23 [Matters | 小银：【译文】“直到你和你的子孙后代都变成中国人”：新疆拘禁过后的生活](/articles/cdt/385698.md)
 
 2-23 [Matters | 猎人格拉库斯：2021年回新疆过年](/articles/cdt/385699.md)
-
-2-23 [【立此存照】男子旅居国外诋毁戍边英雄被上网追逃](/articles/cdt/385702.md)
-
-2-23 [【异闻观止】澎湃新闻 | 三天内，7人因诋毁戍边英雄被拘](/articles/cdt/385703.md)
 
