--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-6 [世界或正形成美中两大冷战阵营](/articles/dw/1043130.md)
+
+4-6 [颶風引發印尼洪災](/articles/dw/1043131.md)
+
 4-6 [关注新疆遭指「女汉奸」 许秀中称矢志不渝](/articles/dw/1043132.md)
 
 4-6 [美日印澳法布局印太 中国海空演训压台湾](/articles/dw/1043133.md)
@@ -596,8 +600,4 @@
 3-19 [朝鲜宣布与马来西亚断绝外交关系](/articles/dw/1043428.md)
 
 3-19 [多国重启阿斯利康疫苗接种](/articles/dw/1043429.md)
-
-3-19 [拜登提前兑现疫苗接种承诺](/articles/dw/1043430.md)
-
-3-19 [中美峰会首日落幕 专家: 对结果不抱过多期待](/articles/dw/1043431.md)
 
