--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-6 [冰岛火山出现新裂缝 喷出橘色岩浆 – 法国国际广播电台 - RFI](/articles/rfi/1032361.md)
+
+4-6 [欧冠对阵曼城在即 多特力扫哈朗德走人传闻 – 法国国际广播电台 - RFI](/articles/rfi/1032362.md)
+
 4-6 [软银砸805亿 收购AutoStore四成股权 – 法国国际广播电台 - RFI](/articles/rfi/1032363.md)
 
 4-6 [纽西兰通过与澳洲旅游泡泡 4月18日启动 – 法国国际广播电台 - RFI](/articles/rfi/1032364.md)
@@ -596,8 +600,4 @@
 3-28 [Longyi- 缅甸妇女的“笼基”革命](/articles/rfi/1032659.md)
 
 3-28 [澄清法国在卢旺达种族大屠杀事件扮演的角色 - 要闻分析](/articles/rfi/1032660.md)
-
-3-28 [新时代需求下，四巨头齐聚首印太战略整装待发](/articles/rfi/1032661.md)
-
-3-28 [乌克兰东部战斗激烈 停火寿终正寝？](/articles/rfi/1032662.md)
 
