--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-6 [美国也搞疫苗外交？国务卿任命疫苗全球外交协调员“为了挽救生命”](/articles/voa/1041712.md)
+
 4-6 [称要保护运动员健康 朝鲜宣布不参加东京奥运会](/articles/voa/1041713.md)
 
 4-6 [中国海军：航母编队在台湾周边训练将会常态化](/articles/voa/1041714.md)
@@ -598,6 +600,4 @@
 3-25 [欧洲议会势力强大的党派发声：北京取消制裁是欧中投资协定通过的前提 Sanctions row threatens EU](/articles/voa/1042010.md)
 
 3-25 [香港电台编导蔡玉玲报道7-21事件被控虚假陈述开审 法官押后4月底裁决](/articles/voa/1042011.md)
-
-3-25 [马云过后是化腾？ 传腾讯老板本月与中国反垄断官员面谈](/articles/voa/1042012.md)
 
