--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-6 [印媒鼓励政府多跟台湾合作 踩痛中国"一中"政策](/articles/rfa/1045951.md)
+
 4-6 [中国电影局启动党庆影展  各影院每周至少播放2部红片](/articles/rfa/1045952.md)
 
 4-6 [中国“渔船”赖着不走    菲律宾八点声明谴责](/articles/rfa/1045953.md)
@@ -598,6 +600,4 @@
 3-2 [法治进一步倒退     习近平：律师必须“拥护党”](/articles/rfa/1046249.md)
 
 3-2 [台港青年齐抗暴 声援香港中大以及47遭起诉民主派成员](/articles/rfa/1046250.md)
-
-3-2 [中国律师 : 香港法庭审讯过程大陆化](/articles/rfa/1046251.md)
 
