--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-6 [朝鲜退出东京奥运会](/articles/ft/1045794.md)
+
 4-6 [十四五：如何跨过中国宏观经济新周期](/articles/ft/1045795.md)
 
 4-6 [中美关系：广义资本流动视角](/articles/ft/1045796.md)
@@ -598,6 +600,4 @@
 2-8 [从Clubhouse的火爆看邀请制的魅力](/articles/ft/1046092.md)
 
 2-8 [耶伦：1.9万亿美元刺激计划将使美国实现充分就业](/articles/ft/1046093.md)
-
-2-8 [为什么是梅尔文资本栽了？](/articles/ft/1046094.md)
 
