--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-6 [中共对台灰色地带威胁升高 台湾人为何还能保持乐观？](/articles/voa/1041711.md)
+
 4-6 [美国也搞疫苗外交？国务卿任命疫苗全球外交协调员“为了挽救生命”](/articles/voa/1041712.md)
 
 4-6 [称要保护运动员健康 朝鲜宣布不参加东京奥运会](/articles/voa/1041713.md)
@@ -598,6 +600,4 @@
 3-25 [时事大家谈: 美国联盟抗中之际，中国把目光转向俄罗斯？](/articles/voa/1042009.md)
 
 3-25 [欧洲议会势力强大的党派发声：北京取消制裁是欧中投资协定通过的前提 Sanctions row threatens EU](/articles/voa/1042010.md)
-
-3-25 [香港电台编导蔡玉玲报道7-21事件被控虚假陈述开审 法官押后4月底裁决](/articles/voa/1042011.md)
 
