--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-6 [约旦王室动荡 前王储遭软禁](/articles/dw/1043126.md)
+
 4-6 [普京为当“终身总统”铺平道路](/articles/dw/1043127.md)
 
 4-6 [若世上所有公司都交纳最低税](/articles/dw/1043128.md)
@@ -598,6 +600,4 @@
 3-19 [美国亚裔仇视犯罪激增](/articles/dw/1043424.md)
 
 3-19 [联邦议院评估报告: 办奥运无助于改善中国人权](/articles/dw/1043425.md)
-
-3-19 [“世界最幸福国家“：芬兰四连冠](/articles/dw/1043426.md)
 
