--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-6 [当爱国主义成为卖点：中国品牌从“抵制潮”中看到机会](/articles/nyt/1046999.md)
+
 4-6 [著名汉学家施舟人逝世，享年86岁](/articles/nyt/1047000.md)
 
 4-6 [中国在争议水域部署大量船只，加强对南海控制](/articles/nyt/1047001.md)
@@ -598,6 +600,4 @@
 1-18 [简报：五名香港抗议者赴美寻求庇护；吉林出现超级传播者](/articles/nyt/1047297.md)
 
 1-15 [社交媒体封杀特朗普也许有效，但代价是什么？](/articles/nyt/1047298.md)
-
-1-15 [被社交平台封杀的特朗普在中国找到支持者](/articles/nyt/1047299.md)
 
