--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-6 [评论：立陶宛挑战中国  风险虽大 却是明智之举](/articles/dw/1043124.md)
+
+4-6 [为什么拜登要斥资数万亿美元追赶 “基建狂魔”？](/articles/dw/1043125.md)
+
 4-6 [约旦王室动荡 前王储遭软禁](/articles/dw/1043126.md)
 
 4-6 [普京为当“终身总统”铺平道路](/articles/dw/1043127.md)
@@ -596,8 +600,4 @@
 3-19 [希望黯淡：北约军事干预利比亚十年后](/articles/dw/1043422.md)
 
 3-19 [德语媒体：火药味十足的初次会晤](/articles/dw/1043423.md)
-
-3-19 [美国亚裔仇视犯罪激增](/articles/dw/1043424.md)
-
-3-19 [联邦议院评估报告: 办奥运无助于改善中国人权](/articles/dw/1043425.md)
 
