--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-6 [EMA高官：AZ疫苗与血栓形成有关 – 法国国际广播电台 - RFI](/articles/rfi/1032358.md)
+
 4-6 [气候变迁 赤道海洋生物朝两极迁移 – 法国国际广播电台 - RFI](/articles/rfi/1032359.md)
 
 4-6 [防疫情加剧  沙国只准免疫者入境朝圣 – 法国国际广播电台 - RFI](/articles/rfi/1032360.md)
@@ -598,6 +600,4 @@
 3-28 [加拿大外长：中国的作为就像校园恶霸](/articles/rfi/1032656.md)
 
 3-28 [缅甸军方镇压民主&quot;最血腥的一天&quot; 近90人死亡 欧美联合国纷纷谴责](/articles/rfi/1032657.md)
-
-3-28 [意大利名牌班尼顿OVS捍卫人权 拒用新疆棉](/articles/rfi/1032658.md)
 
