--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-6 [原材料价格涨不停   中国电器价格最高加价三成](/articles/rfa/1045949.md)
+
 4-6 [南海新八国联军？ 中国重视颜面胜于利益 会重蹈清末悲剧？](/articles/rfa/1045950.md)
 
 4-6 [印媒鼓励政府多跟台湾合作 踩痛中国"一中"政策](/articles/rfa/1045951.md)
@@ -598,6 +600,4 @@
 3-2 [“港版美丽岛”审讯     任全牛 : 想不到香港已比不上大陆](/articles/rfa/1046247.md)
 
 3-2 [云南两座逾百年历史清真寺遭强拆](/articles/rfa/1046248.md)
-
-3-2 [法治进一步倒退     习近平：律师必须“拥护党”](/articles/rfa/1046249.md)
 
