--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-6 [滴滴启动造车项目 负责人为滴滴副总裁、小桔车服总经理杨峻--本地媒体](/articles/reuters/1039688.md)
+
+4-6 [印度法院驳回字节跳动对于解冻银行账户的请求](/articles/reuters/1039689.md)
+
+4-6 [中国应适时建立人民币汇率期货市场 健全汇率风险宏观审慎管理体系--央行论文](/articles/reuters/1039690.md)
+
 4-6 [德国预计全球金融领袖本周将支持IMF的6,500亿美元特别提款权分配](/articles/reuters/1039691.md)
 
 4-6 [独家：欧盟阻止向澳洲出口310万剂阿斯利康新冠疫苗--消息人士](/articles/reuters/1039692.md)
@@ -594,10 +600,4 @@
 3-29 [亚洲股市气氛谨慎 等待拜登基础设施支出计划细节](/articles/reuters/1039986.md)
 
 3-29 [一周展望：美股投资者未雨绸缪 转向公用事业股规避潜在风险](/articles/reuters/1039987.md)
-
-3-29 [瑞萨电子芯片厂火灾影响机台数量高于先前估算--日经新闻](/articles/reuters/1039988.md)
-
-3-29 [《图表新闻》五大主题：季末拉锯战](/articles/reuters/1039989.md)
-
-3-29 [新疆政府回应H&M等涉新疆棉风波：企业盲目裹挟到所谓的制裁行动当中是不理智的](/articles/reuters/1039990.md)
 
