--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-6 [香港再增输入个案 专家建议禁菲律宾等国航班](/articles/voa/1041710.md)
+
 4-6 [中共对台灰色地带威胁升高 台湾人为何还能保持乐观？](/articles/voa/1041711.md)
 
 4-6 [美国也搞疫苗外交？国务卿任命疫苗全球外交协调员“为了挽救生命”](/articles/voa/1041712.md)
@@ -598,6 +600,4 @@
 3-25 [马云过后是化腾？ 传腾讯老板本月与中国反垄断官员面谈](/articles/voa/1042008.md)
 
 3-25 [时事大家谈: 美国联盟抗中之际，中国把目光转向俄罗斯？](/articles/voa/1042009.md)
-
-3-25 [欧洲议会势力强大的党派发声：北京取消制裁是欧中投资协定通过的前提 Sanctions row threatens EU](/articles/voa/1042010.md)
 
