--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-6 [缅甸示威者喷涂红漆抗议军方镇压 “鲜血”染红城市街头](/articles/voa/1041708.md)
+
+4-6 [菲律宾就中国渔船滞留立场放缓 中国外交部要菲“停止无端炒作”](/articles/voa/1041709.md)
+
 4-6 [香港再增输入个案 专家建议禁菲律宾等国航班](/articles/voa/1041710.md)
 
 4-6 [中共对台灰色地带威胁升高 台湾人为何还能保持乐观？](/articles/voa/1041711.md)
@@ -596,8 +600,4 @@
 3-25 [美国务卿呼吁北约盟国共同抵制北京威胁](/articles/voa/1042006.md)
 
 3-25 [欧洲议会势力强大的党派发声：北京取消制裁是欧中投资协定通过的前提](/articles/voa/1042007.md)
-
-3-25 [马云过后是化腾？ 传腾讯老板本月与中国反垄断官员面谈](/articles/voa/1042008.md)
-
-3-25 [时事大家谈: 美国联盟抗中之际，中国把目光转向俄罗斯？](/articles/voa/1042009.md)
 
