--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-7 [探视遭拒  纳瓦尼支持者流放地被捕 – 法国国际广播电台 - RFI](/articles/rfi/1032349.md)
+
+4-7 [欧盟当局尚未就AZ疫苗与血栓有无关联做出结论 – 法国国际广播电台 - RFI](/articles/rfi/1032350.md)
+
 4-6 [拯救法航 法国政府将注资40亿欧元 – 法国国际广播电台 - RFI](/articles/rfi/1032351.md)
 
 4-6 [Archegos爆仓事件 瑞士信贷亏损47亿美元 – 法国国际广播电台 - RFI](/articles/rfi/1032352.md)
@@ -596,8 +600,4 @@
 3-28 [中国报复涉疆制裁 布林肯谴责毫无根据 – 法国国际广播电台 - RFI](/articles/rfi/1032647.md)
 
 3-28 [专家袁国勇指零本地感染有望“清零”](/articles/rfi/1032648.md)
-
-3-28 [香港有大叔街头支持“小粉红”杯葛H&amp;M](/articles/rfi/1032649.md)
-
-3-28 [响应国际关灯日 全球知名地标熄灯一小时 – 法国国际广播电台 - RFI](/articles/rfi/1032650.md)
 
