--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-7 [日本外相呼吁中国停止压制香港 中方回应：别跟美国联手抗中](/articles/voa/1041706.md)
+
 4-6 [罗斯福号航母战斗群重返南中国海 致力维护航行自由](/articles/voa/1041707.md)
 
 4-6 [缅甸示威者喷涂红漆抗议军方镇压 “鲜血”染红城市街头](/articles/voa/1041708.md)
@@ -598,6 +600,4 @@
 3-25 [美中气候特使见而未谈 专家：两国紧张或增加合作难度](/articles/voa/1042004.md)
 
 3-25 [街头遭袭后奋勇反击的亚裔奶奶将把90万美元募款捐给亚太裔社区](/articles/voa/1042005.md)
-
-3-25 [美国务卿呼吁北约盟国共同抵制北京威胁](/articles/voa/1042006.md)
 
