--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-7 [法美日澳印举行联合军演 对抗中国日益扩张的军事活动](/articles/voa/1041705.md)
+
 4-7 [日本外相呼吁中国停止压制香港 中方回应：别跟美国联手抗中](/articles/voa/1041706.md)
 
 4-6 [罗斯福号航母战斗群重返南中国海 致力维护航行自由](/articles/voa/1041707.md)
@@ -598,6 +600,4 @@
 3-25 [拜登上任后的首场记者会为何迟迟才来？](/articles/voa/1042003.md)
 
 3-25 [美中气候特使见而未谈 专家：两国紧张或增加合作难度](/articles/voa/1042004.md)
-
-3-25 [街头遭袭后奋勇反击的亚裔奶奶将把90万美元募款捐给亚太裔社区](/articles/voa/1042005.md)
 
