--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-7 [《纽约客》：新疆拘留营幸存妇女的经历](/articles/rfa/1045944.md)
+
+4-7 [中国环球电视网重返欧洲 但争议不断](/articles/rfa/1045945.md)
+
 4-6 [傅希秋牧师：中国洗脑式关押基督徒的案例](/articles/rfa/1045946.md)
 
 4-6 [在台缅人：要死多少联合国才会说句话？中国滚出缅甸！](/articles/rfa/1045947.md)
@@ -596,8 +600,4 @@
 3-3 [中国运作大量假信息宣传   欧盟:没有资源或权力对抗](/articles/rfa/1046242.md)
 
 3-3 [美议员再提案美台恢复邦交 终结一中政策](/articles/rfa/1046243.md)
-
-3-3 [台湾、大陆同时在同地区军事演练  巧合还是有意？](/articles/rfa/1046244.md)
-
-3-2 [北京及贵州等地异议人士被控制  鲍彤被禁言](/articles/rfa/1046245.md)
 
