--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-7 [时事大家谈: 孙大午被捕逾四个月，谁还敢为他发声？](/articles/voa/1041703.md)
+
+4-7 [IMF看好世界经济前景，大幅上调美中经济增速](/articles/voa/1041704.md)
+
 4-7 [法美日澳印举行联合军演 对抗中国日益扩张的军事活动](/articles/voa/1041705.md)
 
 4-7 [日本外相呼吁中国停止压制香港 中方回应：别跟美国联手抗中](/articles/voa/1041706.md)
@@ -596,8 +600,4 @@
 3-25 [美官员：世卫组织新冠病毒源头调查需要进一步研究](/articles/voa/1042001.md)
 
 3-25 [朝鲜试射导弹 是对拜登的挑衅吗？](/articles/voa/1042002.md)
-
-3-25 [拜登上任后的首场记者会为何迟迟才来？](/articles/voa/1042003.md)
-
-3-25 [美中气候特使见而未谈 专家：两国紧张或增加合作难度](/articles/voa/1042004.md)
 
