--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-7 [专访罗谷: 中国农民工是被党利用的“二等公民”](/articles/rfa/1045940.md)
+
+4-7 [缅甸局势恶化  中国怎能独善其身？](/articles/rfa/1045941.md)
+
+4-7 [中国网络暴力猎巫    女权博主纷纷炸号](/articles/rfa/1045942.md)
+
 4-7 [反制中国掠夺资源   加拿大将保护并开发稀有矿产](/articles/rfa/1045943.md)
 
 4-7 [《纽约客》：新疆拘留营幸存妇女的经历](/articles/rfa/1045944.md)
@@ -594,10 +600,4 @@
 3-3 [中国两会前瞻：习李这次会同调吗?](/articles/rfa/1046238.md)
 
 3-3 [江天勇获释两周年   仍被软禁无自由](/articles/rfa/1046239.md)
-
-3-3 [访谈旧金山缅甸民运人士：呼吁中国政府跟随国际主流](/articles/rfa/1046240.md)
-
-3-3 [加台举办首届女性企业家大会  进一步强化经贸](/articles/rfa/1046241.md)
-
-3-3 [中国运作大量假信息宣传   欧盟:没有资源或权力对抗](/articles/rfa/1046242.md)
 
