--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-7 [中国驻土耳其大使因新疆问题言论而被土外交部召见](/articles/voa/1041700.md)
+
 4-7 [两党议员敦促拜登编列预算，加强美国的5G竞争](/articles/voa/1041701.md)
 
 4-7 [美法警通过国际刑警组织对枪杀耶鲁华裔研究生案的嫌疑人发出“红通”](/articles/voa/1041702.md)
@@ -598,6 +600,4 @@
 3-25 [美国将与邻国共享新冠疫苗](/articles/voa/1041998.md)
 
 3-25 [美国证交会开始推出将中国公司摘牌的规定](/articles/voa/1041999.md)
-
-3-25 [研究报告：美国未能有效对抗中国的地缘政治崛起](/articles/voa/1042000.md)
 
