--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-7 [武汉清明墓园人满为患  律师吁公开疫苗信息](/articles/rfa/1045938.md)
+
+4-7 [日本态度大转弯  欲与美合作促台海和平](/articles/rfa/1045939.md)
+
 4-7 [专访罗谷: 中国农民工是被党利用的“二等公民”](/articles/rfa/1045940.md)
 
 4-7 [缅甸局势恶化  中国怎能独善其身？](/articles/rfa/1045941.md)
@@ -596,8 +600,4 @@
 3-3 [中国富豪数量远超美国 但为何比较小气？](/articles/rfa/1046236.md)
 
 3-3 [习近平要求忠诚、热衷“斗争”   学者：回归毛时代](/articles/rfa/1046237.md)
-
-3-3 [中国两会前瞻：习李这次会同调吗?](/articles/rfa/1046238.md)
-
-3-3 [江天勇获释两周年   仍被软禁无自由](/articles/rfa/1046239.md)
 
