--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-7 [无视美股下跌和日圆升值 日股开高 – 法国国际广播电台 - RFI](/articles/rfi/1032346.md)
+
+4-7 [涨高拉回 美股收黑 – 法国国际广播电台 - RFI](/articles/rfi/1032347.md)
+
 4-7 [IMF上修全球经济成长率 欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1032348.md)
 
 4-7 [探视遭拒  纳瓦尼支持者流放地被捕 – 法国国际广播电台 - RFI](/articles/rfi/1032349.md)
@@ -596,8 +600,4 @@
 3-28 [缅甸血腥军人节 12国防长谴责镇压 – 法国国际广播电台 - RFI](/articles/rfi/1032644.md)
 
 3-28 [12港人案李宇轩被禁迄今6日仍“人间蒸发”](/articles/rfi/1032645.md)
-
-3-28 [加拿大温哥华传持刀攻击案 6人送医凶嫌落网 – 法国国际广播电台 - RFI](/articles/rfi/1032646.md)
-
-3-28 [中国报复涉疆制裁 布林肯谴责毫无根据 – 法国国际广播电台 - RFI](/articles/rfi/1032647.md)
 
