--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-7 [回声Huisheng | 179起人身安全保护令：看见家暴受害者的困境](/articles/cdt/384060.md)
+
 4-7 [吕频： 论性别恐怖主义 — — 我们犯了女权罪](/articles/cdt/384061.md)
 
 4-7 [界面文化 | 差评、举报信与豆瓣“一星运动”：自发反抗如何走向以暴制暴？| 思想界](/articles/cdt/384063.md)
@@ -598,6 +600,4 @@
 2-24 [友朋说 | 刘擎：创伤记忆与雪耻型民族主义](/articles/cdt/385660.md)
 
 2-24 [全现在｜被系统碾压的基层快递：没白没黑工作7个月，结果倒欠13万](/articles/cdt/385665.md)
-
-2-23 [人间三角｜女生坐货拉拉搬家，途中跳窗身亡：平台完善，非得付出生命代价吗？](/articles/cdt/385677.md)
 
