--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-7 [中国如何推动疫苗接种？从买一赠一冰淇淋开始](/articles/nyt/1046997.md)
+
+4-7 [简报：中国高压利诱推进疫苗接种；抵制潮令本土品牌获益](/articles/nyt/1046998.md)
+
 4-6 [当爱国主义成为卖点：中国品牌从“抵制潮”中看到机会](/articles/nyt/1046999.md)
 
 4-6 [著名汉学家施舟人逝世，享年86岁](/articles/nyt/1047000.md)
@@ -596,8 +600,4 @@
 1-18 [五名逃离香港的抗议者在美国寻求庇护](/articles/nyt/1047295.md)
 
 1-18 [香港新政党紫荆党搅动政界，背景目的引发争议](/articles/nyt/1047296.md)
-
-1-18 [简报：五名香港抗议者赴美寻求庇护；吉林出现超级传播者](/articles/nyt/1047297.md)
-
-1-15 [社交媒体封杀特朗普也许有效，但代价是什么？](/articles/nyt/1047298.md)
 
