--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+4-7 [福布斯巨富榜出炉 亚马逊执行长贝佐斯四连霸](/articles/reuters/1039652.md)
+
+4-7 [药明生物称其无锡生产基地完成美国FDA GMP上市批准前检查](/articles/reuters/1039653.md)
+
+4-7 [焦点：三星电子称第一季获利料增44% 符合分析师预测](/articles/reuters/1039654.md)
+
+4-7 [日本和美国没有讨论可能抵制北京冬奥会的问题--日本内阁官房长官](/articles/reuters/1039655.md)
+
 4-7 [英特尔推出新款“冰湖”芯片 寄望提升供应链优势](/articles/reuters/1039656.md)
 
 4-7 [SK海力士就汽车内存芯片供货与德国博世接近达成协议--报载](/articles/reuters/1039657.md)
@@ -592,12 +600,4 @@
 3-30 [焦点：长赐号脱困苏伊士运河复航 交通阻塞三到三天半疏通](/articles/reuters/1039950.md)
 
 3-30 [特写：中国地方AMC“疯抢”首批个贷不良包 欲借此锻造团队实现弯道超车](/articles/reuters/1039951.md)
-
-3-30 [市场洞察：美元前景仍看涨 人民币或迎来“补跌”行情](/articles/reuters/1039952.md)
-
-3-30 [焦点：美联储理事沃勒称距离升息“还有很长一段路要走”](/articles/reuters/1039953.md)
-
-3-30 [路透测算的人民币中间价料贬至6.5625元附近 上日市场价大跌](/articles/reuters/1039954.md)
-
-3-30 [白宫称拜登总统不打算与朝鲜领导人金正恩会晤](/articles/reuters/1039955.md)
 
