--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-7 [日本称没有在与美国磋商共同抵制北京冬奥会](/articles/voa/1041691.md)
+
 4-7 [厨师联手用厨艺反击对亚太裔的仇恨攻击](/articles/voa/1041692.md)
 
 4-7 [布吉的篮球梦抒发亚裔美国人的不平之鸣](/articles/voa/1041693.md)
@@ -598,6 +600,4 @@
 3-25 [耐克新疆声明在中国社媒引发风暴](/articles/voa/1041989.md)
 
 3-25 [美日官员称朝鲜向日本海发射两颗弹道导弹](/articles/voa/1041990.md)
-
-3-25 [布林肯北约讲话：重新强调并重新构思美国的同盟关系(全文翻译)](/articles/voa/1041991.md)
 
