--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-7 [高峰过后全球网上零售额今年增速将放慢 然长远势头不减--经济学人智库](/articles/reuters/1039648.md)
+
+4-7 [G20财经首长会议将讨论抗疫措施及全球最低企业税计划](/articles/reuters/1039649.md)
+
+4-7 [诺基亚和联想集团就专利诉讼案达成和解](/articles/reuters/1039650.md)
+
 4-7 [中国牛电科技将在美国和欧洲推出滑板车和电动自行车](/articles/reuters/1039651.md)
 
 4-7 [福布斯巨富榜出炉 亚马逊执行长贝佐斯四连霸](/articles/reuters/1039652.md)
@@ -594,10 +600,4 @@
 3-30 [分析：钱不是问题 全球半导体投资热潮恐致产能过剩](/articles/reuters/1039946.md)
 
 3-30 [美国贸易代表戴琪称强烈希望与欧盟发展“更正向”的贸易关系](/articles/reuters/1039947.md)
-
-3-30 [新冠病毒可能从蝙蝠透过另一种动物传染给人类 需更多研究--WHO报告](/articles/reuters/1039948.md)
-
-3-30 [沙特希望OPEC+将减产举措延至5-6月--消息](/articles/reuters/1039949.md)
-
-3-30 [焦点：长赐号脱困苏伊士运河复航 交通阻塞三到三天半疏通](/articles/reuters/1039950.md)
 
