--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-7 [台外长：若遭中国攻击 台湾会战斗到底](/articles/voa/1041690.md)
+
 4-7 [日本称没有在与美国磋商共同抵制北京冬奥会](/articles/voa/1041691.md)
 
 4-7 [厨师联手用厨艺反击对亚太裔的仇恨攻击](/articles/voa/1041692.md)
@@ -598,6 +600,4 @@
 3-25 [中国禁“校园贷” 观察人士:“一刀切”政策有利有弊](/articles/voa/1041988.md)
 
 3-25 [耐克新疆声明在中国社媒引发风暴](/articles/voa/1041989.md)
-
-3-25 [美日官员称朝鲜向日本海发射两颗弹道导弹](/articles/voa/1041990.md)
 
