--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-7 [香港法院审理831集结案 黎智英等人当庭认罪](/articles/dw/1043109.md)
+
+4-7 [等一下！我的麦克风！](/articles/dw/1043110.md)
+
 4-7 [伊朗与世界大国就重启核协议进行「建设性」会谈](/articles/dw/1043111.md)
 
 4-7 [发推警告土耳其政治人物 网民挞伐中国大使](/articles/dw/1043112.md)
@@ -596,8 +600,4 @@
 3-21 [反亚裔种族主义加剧 德国也不例外](/articles/dw/1043407.md)
 
 3-20 [德语媒体：美国如何继续当好国际领袖](/articles/dw/1043408.md)
-
-3-20 [拜登登机时连跌三次 都是风的错？](/articles/dw/1043409.md)
-
-3-20 [海外观众将被无缘东京奥运会](/articles/dw/1043410.md)
 
