--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-7 [【CDTV】夏至工作室｜一个“网络喷子”的自白](/articles/cdt/384051.md)
+
 4-7 [澎湃新闻｜货车司机因“北斗掉线”被扣车+罚款两千，在超限站内服毒自杀](/articles/cdt/384055.md)
 
 4-7 [回声Huisheng | 179起人身安全保护令：看见家暴受害者的困境](/articles/cdt/384060.md)
@@ -598,6 +600,4 @@
 2-24 [【网络民议】微博网民“玛丽莲梦六”获刑6个月  搜狐新闻评论区翻车](/articles/cdt/385654.md)
 
 2-24 [罗翔说刑法 | 为什么网络发帖不宜以寻衅滋事论处？](/articles/cdt/385656.md)
-
-2-24 [友朋说 | 刘擎：创伤记忆与雪耻型民族主义](/articles/cdt/385660.md)
 
