--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-7 [大赦国际：中国等国家以疫情为由扩大攻击人权](/articles/voa/1041688.md)
+
+4-7 [中国判处维族前新疆高级官员死刑 罪名是分裂国家](/articles/voa/1041689.md)
+
 4-7 [台外长：若遭中国攻击 台湾会战斗到底](/articles/voa/1041690.md)
 
 4-7 [日本称没有在与美国磋商共同抵制北京冬奥会](/articles/voa/1041691.md)
@@ -596,8 +600,4 @@
 3-25 [多重利空形成重压 中国科技企业在美港股市遭重创](/articles/voa/1041986.md)
 
 3-25 [国际品牌停用疆棉在中国引发抵制浪潮 这一套世界要继续吃吗？](/articles/voa/1041987.md)
-
-3-25 [中国禁“校园贷” 观察人士:“一刀切”政策有利有弊](/articles/voa/1041988.md)
-
-3-25 [耐克新疆声明在中国社媒引发风暴](/articles/voa/1041989.md)
 
