--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-7 [东芝证实 考虑英国私募基金CVC收购提议 – 法国国际广播电台 - RFI](/articles/rfi/1032330.md)
+
+4-7 [疫苗接种计画进度落后 澳总理归咎欧盟限制出口 – 法国国际广播电台 - RFI](/articles/rfi/1032331.md)
+
 4-7 [抵制北京冬奥呼声渐涨 美将与盟邦商讨 – 法国国际广播电台 - RFI](/articles/rfi/1032332.md)
 
 4-7 [拜登：所有美国成年人4/19都能打COVID-19疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1032333.md)
@@ -596,8 +600,4 @@
 3-28 [苏伊士运河塞船 叙利亚实施燃料配给 – 法国国际广播电台 - RFI](/articles/rfi/1032628.md)
 
 3-28 [苏伊士运河: “长赐号”搁浅因失误？](/articles/rfi/1032629.md)
-
-3-28 [泰媒：缅甸问题因地缘政治复杂化 - 曼谷专栏](/articles/rfi/1032630.md)
-
-3-28 [缅甸军人节血腥镇压 美英日等12国最高军事长官联名谴责](/articles/rfi/1032631.md)
 
