--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-7 [无法摆脱的新疆棉：西方与中国之间，国际品牌选哪边](/articles/nyt/1046994.md)
+
 4-7 [留住富人：中共计划在香港实施税收优惠政策](/articles/nyt/1046995.md)
 
 4-7 [离家出走自驾游，56岁的她成为中国女权主义偶像](/articles/nyt/1046996.md)
@@ -598,6 +600,4 @@
 1-18 [《后翼弃兵》：国际象棋也可以很“性感”](/articles/nyt/1047292.md)
 
 1-18 [老干妈与蓝领潮：一个中国小镇的经济复苏样本](/articles/nyt/1047293.md)
-
-1-18 [中国经济逆势复苏，2020年GDP增长2.3%](/articles/nyt/1047294.md)
 
