--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-7 [AI人权报告：防疫助长监控 56%国家防疫措施歧视弱势](/articles/rfa/1045935.md)
+
+4-7 [抵制外国品牌热炒国货敛财   匪夷所思之举折射社会现状](/articles/rfa/1045936.md)
+
+4-7 [中国官媒高调宣传辽宁舰 台外长批“自欺欺人”](/articles/rfa/1045937.md)
+
 4-7 [武汉清明墓园人满为患  律师吁公开疫苗信息](/articles/rfa/1045938.md)
 
 4-7 [日本态度大转弯  欲与美合作促台海和平](/articles/rfa/1045939.md)
@@ -594,10 +600,4 @@
 3-3 [国民党主席江启臣：不急于与习近平会面](/articles/rfa/1046233.md)
 
 3-3 [中国农民刚全面脱贫  农民医疗补贴即涨逾倍](/articles/rfa/1046234.md)
-
-3-3 [中国在西巴尔干地区影响力上升引发关注](/articles/rfa/1046235.md)
-
-3-3 [中国富豪数量远超美国 但为何比较小气？](/articles/rfa/1046236.md)
-
-3-3 [习近平要求忠诚、热衷“斗争”   学者：回归毛时代](/articles/rfa/1046237.md)
 
