--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-7 [【CDT推荐】本周推荐媒体](/articles/cdt/384044.md)
+
 4-7 [懂事会大王｜大家都是割韭菜的，拼多多能不能专业点啊](/articles/cdt/384047.md)
 
 4-7 [回归常识｜完美！这下彻底“脱离群众”了](/articles/cdt/384048.md)
@@ -598,6 +600,4 @@
 2-24 [光传媒 | 许章润：致意这个美好人间](/articles/cdt/385645.md)
 
 2-24 [光传媒 | 冯睎干：革除「陋习」到革除「陋刃」](/articles/cdt/385646.md)
-
-2-24 [德国之声 | 加拿大国会认定中国对维吾尔人种族灭绝](/articles/cdt/385647.md)
 
