--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-7 [降低对中国依赖已成韩国芯片业生存之道](/articles/voa/1041683.md)
+
+4-7 [台湾官员：中国无人机若进入禁区“该击落就击落”](/articles/voa/1041684.md)
+
 4-7 [美国和伊朗表示间接核谈判富有建设性](/articles/voa/1041685.md)
 
 4-7 [黎智英等人案子开审，李卓人：历史将宣判我们无罪](/articles/voa/1041686.md)
@@ -596,8 +600,4 @@
 3-26 [韩国古装剧被指歪曲历史及出现中国食物引热议 民众要求停播](/articles/voa/1041981.md)
 
 3-26 [港府通知各国拒绝接受BNO护照，驻港外交官称之为“外交冒犯”](/articles/voa/1041982.md)
-
-3-26 [缅甸周四恢复反政变示威活动](/articles/voa/1041983.md)
-
-3-25 [中国外长王毅出访土耳其 当地维吾尔人抗议中国打压](/articles/voa/1041984.md)
 
