--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-7 [蔡英文宣示要改革百年老店台铁](/articles/rfa/1045932.md)
+
 4-7 [吉林残障访民脑溢血命危   家属称追究到底](/articles/rfa/1045933.md)
 
 4-7 [清明节毛泽东妻墓地开放   民间自发抵制文革回潮](/articles/rfa/1045934.md)
@@ -598,6 +600,4 @@
 3-3 [武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404（删除）](/articles/rfa/1046230.md)
 
 3-3 [“港版美丽岛”大审判第三日    港人未言弃：香港人一起走下去！](/articles/rfa/1046231.md)
-
-3-3 [多国力挺台湾凤梨 五天认购量逼近中国一年订单](/articles/rfa/1046232.md)
 
