--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-8 [新冠期间亚裔医护人员面临更多挑战](/articles/voa/1041680.md)
+
 4-8 [印度第二波疫情加剧 新冠疫苗吃紧](/articles/voa/1041681.md)
 
 4-7 [台湾表示如果中国入侵 台湾会战斗到底](/articles/voa/1041682.md)
@@ -598,6 +600,4 @@
 3-26 [远遁乡间避疫的纽约客开始思量不如归去](/articles/voa/1041978.md)
 
 3-26 [中欧协定遭遇意外，北京力促RCEP如期执行](/articles/voa/1041979.md)
-
-3-26 [俄反对派准备新的大规模示威](/articles/voa/1041980.md)
 
