--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-8 [不满战狼外交批评政治人物 土耳其传召中国大使](/articles/rfa/1045931.md)
+
 4-7 [蔡英文宣示要改革百年老店台铁](/articles/rfa/1045932.md)
 
 4-7 [吉林残障访民脑溢血命危   家属称追究到底](/articles/rfa/1045933.md)
@@ -598,6 +600,4 @@
 3-3 [中梵主教任命临时协议用过即丢？ 青岛主教就职未提教宗](/articles/rfa/1046229.md)
 
 3-3 [武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404（删除）](/articles/rfa/1046230.md)
-
-3-3 [“港版美丽岛”大审判第三日    港人未言弃：香港人一起走下去！](/articles/rfa/1046231.md)
 
