--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-8 [一组国际科学家呼吁对新冠病毒的源头展开新的调查](/articles/voa/1041675.md)
+
 4-8 [12港人案李宇轩被控国安法等罪首现身法院 支持者忧被安排官派律师](/articles/voa/1041676.md)
 
 4-8 [时事大家谈: 习近平重设党史禁区，“思想解放”恐成绝响？](/articles/voa/1041677.md)
@@ -598,6 +600,4 @@
 3-26 [克鲁兹提“ROC法”禁美政府不当对待台湾官员](/articles/voa/1041973.md)
 
 3-26 [美国特种作战司令告诉议员：如无美国支持 阿富汗军队可能会崩溃](/articles/voa/1041974.md)
-
-3-26 [中国对台战略模糊，其实自己心中也模糊](/articles/voa/1041975.md)
 
