--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+4-8 [专访《北京之春》导演：民主墙、星星美展、首曝光的现场镜头](/articles/rfa/1045926.md)
+
+4-8 [孙大午律师“被寻衅”  中国民营企业家怎么活？](/articles/rfa/1045927.md)
+
+4-8 [香港黎智英等三人就“831非法集结案” 认罪](/articles/rfa/1045928.md)
+
+4-8 [美国务院发言激起抵制北京冬奥辩论](/articles/rfa/1045929.md)
+
 4-8 [香港立法会前议员郭荣铿平安抵达加拿大](/articles/rfa/1045930.md)
 
 4-8 [不满战狼外交批评政治人物 土耳其传召中国大使](/articles/rfa/1045931.md)
@@ -592,12 +600,4 @@
 3-4 [郭树清警告中国房地产很危险  有解药吗？](/articles/rfa/1046224.md)
 
 3-4 [报告：美要避免美中核大战并维持AI霸主地位](/articles/rfa/1046225.md)
-
-3-4 [专访香港前惩教主任X先生：离职、抗争与流亡](/articles/rfa/1046226.md)
-
-3-4 [欧盟首次启用人权制裁制度  议员质疑惩罚俄罗斯却未制裁中国](/articles/rfa/1046227.md)
-
-3-4 [加拿大维吾尔社区将串联抗议  抵制强迫劳动商品进口](/articles/rfa/1046228.md)
-
-3-3 [中梵主教任命临时协议用过即丢？ 青岛主教就职未提教宗](/articles/rfa/1046229.md)
 
