--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-8 [在科技领域与中国竞争 美参院委员会将就《无尽边疆法》举行听证](/articles/voa/1041667.md)
+
 4-8 [北约成立72周年：联盟面临新挑战和持续威胁](/articles/voa/1041668.md)
 
 4-8 [美疾控中心：美国目前最常见新冠病毒是最早在英国发现的变种](/articles/voa/1041669.md)
@@ -598,6 +600,4 @@
 3-26 [自由之家呼吁改善美国民主 “别让专制政权借此妄称他们的制度更优越”](/articles/voa/1041965.md)
 
 3-26 [白宫要义: 拜登: 习近平骨子没有一丁点民主，美国持续关注台湾、新疆、香港](/articles/voa/1041966.md)
-
-3-26 [四种原理哪个可能性最大？国际专家组即将发布新冠病毒起源调查报告](/articles/voa/1041967.md)
 
