--- a/articles/cdt/384044.md
+++ b/articles/cdt/384044.md
@@ -2,4 +2,4 @@
 [【CDT推荐】本周推荐媒体](https://chinadigitaltimes.net/chinese/664531.html)
 ------
 
-<h3><strong>推特账号：<a href="https://twitter.com/FGuojiang?s=21">中国文字狱事件盘点</a></strong></h3><p>推荐理由：关注被失踪的维权人士“外卖骑士联盟盟主”陈国江</p><h3><strong>播客：<a href="https://podcasts.apple.com/de/podcast/%E6%9C%89%E7%82%B9%E7%94%B0%E5%9B%AD/id1473609035&quot;">有点田园</a></strong></h3><p>推荐理由：一个接地气的讨论性别平等话题的播客</p><div style="width: 510px" class="wp-caption aligncenter"><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/04/肖美丽.jpg" alt="img" width="500" class="aligncenter"></noscript><img src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20500%20333.33333333333%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/04/肖美丽.jpg" alt="img" width="500" class="lazyload aligncenter"><p class="wp-caption-text">播客《有点田园》主播肖美丽</p></div><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/664531.html" data-a2a-title="【CDT推荐】本周推荐媒体"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<h3><strong>推特账号：<a href="https://twitter.com/FGuojiang?s=21">Free Chen Guojiang 关注盟主</a></strong></h3><p>推荐理由：关注被失踪的维权人士“外卖骑士联盟盟主”陈国江</p><h3><strong>播客：<a href="https://podcasts.apple.com/de/podcast/%E6%9C%89%E7%82%B9%E7%94%B0%E5%9B%AD/id1473609035&quot;">有点田园</a></strong></h3><p>推荐理由：一个接地气的讨论性别平等话题的播客</p><div style="width: 510px" class="wp-caption aligncenter"><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/04/肖美丽.jpg" alt="img" width="500" class="aligncenter"></noscript><img src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20500%20333.33333333333%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/04/肖美丽.jpg" alt="img" width="500" class="lazyload aligncenter"><p class="wp-caption-text">播客《有点田园》主播肖美丽</p></div><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/664531.html" data-a2a-title="【CDT推荐】本周推荐媒体"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F664531.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
