--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-8 [【网络民议】 货车司机因北斗掉线被罚款扣车后服毒自杀](/articles/cdt/384038.md)
+
 4-8 [二湘的九维空间 | 方方：这几天，心里颇有温暖感，人间其实还有那么多美好](/articles/cdt/384040.md)
 
 4-8 [宋小二的咸菜罐 | 我要为喝农药自杀的卡车司机说句话](/articles/cdt/384041.md)
@@ -598,6 +600,4 @@
 2-24 [【CDTV】波特王｜台湾人过个春节也被出征？农历春节只有中国人能过？](/articles/cdt/385627.md)
 
 2-28 [【中国哭墙】不见去年人，泪湿春衫袖（2月20-27日，2021年）](/articles/cdt/385640.md)
-
-2-24 [自由亚洲 | 独家专访王靖渝：质疑士兵阵亡是不愿生活在谎言的国度](/articles/cdt/385644.md)
 
