--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+4-8 [重返“世界中心”？沙特阿拉伯大手笔的文娱旅游业投资](/articles/ft/1045786.md)
+
+4-8 [简评拜登新政：“白衣骑士”还是“特洛伊木马”](/articles/ft/1045787.md)
+
+4-8 [特斯拉在华发展“困境”与破局方向](/articles/ft/1045788.md)
+
 4-7 [从政治人类学看世界永久和平问题](/articles/ft/1045789.md)
 
 4-7 [在言论自由和网络仇恨边界不断试探的监管之手](/articles/ft/1045790.md)
@@ -594,10 +600,4 @@
 2-9 [特斯拉已买入15亿美元比特币](/articles/ft/1046084.md)
 
 2-8 [2021年FT全球MBA排行榜分析：“清算之年”](/articles/ft/1046085.md)
-
-2-8 [梅赛德斯：电动车利润将在10年内追上内燃机汽车](/articles/ft/1046086.md)
-
-2-8 [美国“散户革命”带来的思考](/articles/ft/1046087.md)
-
-2-8 [一周世界舆论聚焦：从“更长的电报”到拜登的对华政策演说](/articles/ft/1046088.md)
 
