--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-8 [中德领导人通话 习近平：中欧关系面临各种挑战](/articles/dw/1043097.md)
+
 4-7 [福布斯公布亿万富豪榜  有钱人变得更富了！](/articles/dw/1043098.md)
 
 4-7 [埃尔多安会见欧盟领导人 女士只能靠边坐？](/articles/dw/1043099.md)
@@ -598,6 +600,4 @@
 3-21 [贝多芬第八交响曲第四乐章](/articles/dw/1043395.md)
 
 3-21 [德新冠感染冲破警戒值 “紧急刹车”在所难免](/articles/dw/1043396.md)
-
-3-21 [台海若发冲突 日美确认合作](/articles/dw/1043397.md)
 
