--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-8 [美国对北京恐吓台湾表达“极大关切”](/articles/voa/1041659.md)
+
+4-8 [志愿巡逻队守护亚裔社区](/articles/voa/1041660.md)
+
 4-8 [美国务院否认抵制北京冬奥 将比赛移师他国呼声四起](/articles/voa/1041661.md)
 
 4-8 [美国恢复向巴勒斯坦人提供援助](/articles/voa/1041662.md)
@@ -596,8 +600,4 @@
 3-26 [广州番禺一村委会遭自杀性爆炸 分析：社会矛盾激化的产物](/articles/voa/1041957.md)
 
 3-26 [美军成立太平洋特种作战司令部应对中国信息行动](/articles/voa/1041958.md)
-
-3-26 [中国以新疆“谎言”为由制裁英国实体和个人](/articles/voa/1041959.md)
-
-3-26 [边界议题主导拜登总统首场记者会](/articles/voa/1041960.md)
 
