--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-8 [可卡因、酒精和乌克兰：亨特·拜登回忆录直面争议](/articles/nyt/1046992.md)
+
 4-8 [简报：香港推新政吸引富人；韩国在野党胜选首尔釜山市长](/articles/nyt/1046993.md)
 
 4-7 [无法摆脱的新疆棉：西方与中国之间，国际品牌选哪边](/articles/nyt/1046994.md)
@@ -598,6 +600,4 @@
 1-19 [简报：华盛顿在戒备中迎来总统就职周；中国经济逆势复苏](/articles/nyt/1047290.md)
 
 1-18 [TikTok前途考验拜登对中国科技公司立场](/articles/nyt/1047291.md)
-
-1-18 [《后翼弃兵》：国际象棋也可以很“性感”](/articles/nyt/1047292.md)
 
