--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-8 [拜登政府对中国关税政策将采取攻守并重策略](/articles/voa/1041658.md)
+
 4-8 [美国对北京恐吓台湾表达“极大关切”](/articles/voa/1041659.md)
 
 4-8 [志愿巡逻队守护亚裔社区](/articles/voa/1041660.md)
@@ -598,6 +600,4 @@
 3-26 [“美中关系回不去了！”美议员：阿拉斯加只是漫长艰辛交涉的开端](/articles/voa/1041956.md)
 
 3-26 [广州番禺一村委会遭自杀性爆炸 分析：社会矛盾激化的产物](/articles/voa/1041957.md)
-
-3-26 [美军成立太平洋特种作战司令部应对中国信息行动](/articles/voa/1041958.md)
 
