--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-8 [韩反对党取得补选胜利 对朝接触政策生变数](/articles/ft/1045783.md)
+
 4-8 [每周时事分析：关于当前中国疫苗外交的两个问题](/articles/ft/1045784.md)
 
 4-8 [身份的幻象](/articles/ft/1045785.md)
@@ -598,6 +600,4 @@
 2-9 [欧洲三国驱逐俄罗斯外交官](/articles/ft/1046081.md)
 
 2-9 [货币政策：“模糊”与“清晰”](/articles/ft/1046082.md)
-
-2-9 [“黑匣子”Telegram上的自由和狂欢](/articles/ft/1046083.md)
 
