--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-8 [格陵兰最大反对党赢得选举 将叫停中国作为最大股东的稀土开采项目](/articles/voa/1041654.md)
+
+4-8 [印度新冠感染者日增12万6千再破记录 新西兰暂禁来自印度旅客入境](/articles/voa/1041655.md)
+
+4-8 [彼得·泰尔称中国或将比特币用作对付美国的“金融武器”](/articles/voa/1041656.md)
+
 4-8 [美国关注中国“海上民兵船”大规模聚集牛轭礁 重申坚定支持菲律宾](/articles/voa/1041657.md)
 
 4-8 [拜登政府对中国关税政策将采取攻守并重策略](/articles/voa/1041658.md)
@@ -594,10 +600,4 @@
 3-26 [北京启动在京外籍人士新冠疫苗接种工作 信息不透明中国疫苗仍受质疑](/articles/voa/1041952.md)
 
 3-26 [英国称港府无权决定外国政府认可哪些护照 将继续发放BNO护照](/articles/voa/1041953.md)
-
-3-26 [中国报复尚未结束，澳大利亚葡萄酒再遭重罚](/articles/voa/1041954.md)
-
-3-26 [收取5G专利费： 华为能否走出困境？](/articles/voa/1041955.md)
-
-3-26 [“美中关系回不去了！”美议员：阿拉斯加只是漫长艰辛交涉的开端](/articles/voa/1041956.md)
 
