--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-8 [在谷歌遭遇性骚扰后，我再也不会爱上一份工作](/articles/nyt/1046989.md)
+
 4-8 [疫情带来“意外之喜”，粉红海豚重回香港水域](/articles/nyt/1046990.md)
 
 4-8 [北京冬奥会为我们带来应对习近平的筹码](/articles/nyt/1046991.md)
@@ -598,6 +600,4 @@
 1-19 [香港残障运动员坐轮椅攀爬摩天大楼](/articles/nyt/1047287.md)
 
 1-19 [就业难催生考研热：“被困住”的中国大学生](/articles/nyt/1047288.md)
-
-1-19 [美国的混乱不是送给中国和俄罗斯的大礼](/articles/nyt/1047289.md)
 
