--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-8 [全现在｜对话制造“淄博火锅鱼”的艺术家坚果兄弟：用荒诞抵抗荒诞](/articles/cdt/384013.md)
+
+4-8 [三联生活周刊｜虎扑，“直男”避风港？](/articles/cdt/384014.md)
+
 4-8 [网易数读｜看了下墓地的价格，我选择活着](/articles/cdt/384022.md)
 
 4-8 [自由亚洲 | 孙大午律师“被寻衅” 中国民营企业家怎么活？](/articles/cdt/384024.md)
@@ -596,8 +600,4 @@
 2-24 [【立此存照】“狮子交配”涉嫌色情低俗 《动物世界》或将成禁片？](/articles/cdt/385612.md)
 
 2-25 [【404聊天室】谁在帮方方“递刀子”？——听白睿文教授讲《方方日记》翻译背后的故事](/articles/cdt/385616.md)
-
-2-24 [北戴河桃罐头厂电影修士会｜中国调解节目到底有多阴间？](/articles/cdt/385625.md)
-
-2-24 [槽边往事｜最有文化的吐槽选手许知远](/articles/cdt/385626.md)
 
