--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-8 [美中航母先后表态 美国对台是否该转“战略清晰”?](/articles/rfa/1045924.md)
+
+4-8 [北斗系统“掉线”闹出人命   中国定位技术有效性受质疑](/articles/rfa/1045925.md)
+
 4-8 [专访《北京之春》导演：民主墙、星星美展、首曝光的现场镜头](/articles/rfa/1045926.md)
 
 4-8 [孙大午律师“被寻衅”  中国民营企业家怎么活？](/articles/rfa/1045927.md)
@@ -596,8 +600,4 @@
 3-4 [微软和印度电网成中国黑客最新受害者](/articles/rfa/1046222.md)
 
 3-4 [数十位缅甸示威者丧生  民众对中国颇有不满](/articles/rfa/1046223.md)
-
-3-4 [郭树清警告中国房地产很危险  有解药吗？](/articles/rfa/1046224.md)
-
-3-4 [报告：美要避免美中核大战并维持AI霸主地位](/articles/rfa/1046225.md)
 
