--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+4-8 [广汽集团3月汽车总销量按年升逾57% 电动车产销量大增逾倍](/articles/reuters/1039572.md)
+
+4-8 [中国铝业预计一季度净利同比猛增约30倍 因铝价高位运行产品毛利大增](/articles/reuters/1039573.md)
+
+4-8 [中国国资委要求地方国企填报债券风险监测报表 永续债占比不得超40%--媒体](/articles/reuters/1039574.md)
+
+4-8 [腾讯投资的《绝地求生》游戏开发商Krafton申请IPO 估值料达逾百亿美元](/articles/reuters/1039575.md)
+
 4-8 [人民币收盘随中间价小跌 短期缺乏方向但中期或承压](/articles/reuters/1039576.md)
 
 4-8 [投资外流不利表现 将未来12个月银价轻微下调至24美元/盎司--瑞银财富管理](/articles/reuters/1039577.md)
@@ -592,12 +600,4 @@
 3-31 [分析：中国制造业荣景下热轧卷板业料赚得盆满钵盈](/articles/reuters/1039870.md)
 
 3-31 [焦点：中国3月官方PMI扩张加速 复苏持续一季度经济表现亮眼几成定局](/articles/reuters/1039871.md)
-
-3-31 [综述：美联储决策官员“乐观”看好美国经济即将强劲反弹](/articles/reuters/1039872.md)
-
-3-31 [大众汽车在美国改名“伏特汽车”？ 借愚人节炒作搞笑反引来差评](/articles/reuters/1039873.md)
-
-3-31 [拜登的宠物狗又咬人了 之前就曾因咬伤工作人员被送走](/articles/reuters/1039874.md)
-
-3-31 [美日韩国家安全官员周五将会面讨论朝鲜局势](/articles/reuters/1039875.md)
 
