--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,9 @@
 中国数字时代
 ------
 
-4-8 [【图说天朝】人民公仆为人民累坏了身体 把接种机会让给了人民](/articles/cdt/384012.md)
+4-8 [硬哥｜“淘宝上便宜的汽车定位设备比北斗系统还要可靠”](/articles/cdt/384003.md)
+
+4-8 [【图说天朝】人民公仆为人民累坏了身体 把疫苗接种机会让给了人民](/articles/cdt/384012.md)
 
 4-8 [全现在｜对话制造“淄博火锅鱼”的艺术家坚果兄弟：用荒诞抵抗荒诞](/articles/cdt/384013.md)
 
@@ -598,6 +600,4 @@
 2-25 [冰点周刊｜一个狱警和8000人的“树洞”](/articles/cdt/385580.md)
 
 2-25 [【CDTV】方方：无数个体的声音汇总到一起时它就代表着一个时代](/articles/cdt/385594.md)
-
-2-24 [【立此存照】“狮子交配”涉嫌色情低俗 《动物世界》或将成禁片？](/articles/cdt/385612.md)
 
