--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-8 [中国云南瑞丽市委书记因疫情防控“失职”被撤职调查](/articles/voa/1041648.md)
+
 4-8 [称履行对港人责任 英国斥资4300万英镑助BNO港人居英](/articles/voa/1041649.md)
 
 4-8 [英国政府正式给予罗冠聪政治庇护资格](/articles/voa/1041650.md)
@@ -598,6 +600,4 @@
 3-27 [前美疾控中心主任认为新冠病毒源自武汉实验室 弗契医生称这不代表多数美卫生专家意见](/articles/voa/1041946.md)
 
 3-27 [乌克兰不怕得罪中国，力挺加拿大并冻结马达西奇股份](/articles/voa/1041947.md)
-
-3-27 [港人国际商会: 港府无权要求外国领事馆不承认BNO护照](/articles/voa/1041948.md)
 
