--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-9 [法国首批氢动力列车即将上路 迈向零排放](/articles/rfi/1032204.md)
+
 4-8 [格陵兰岛变天 左翼环保党人领先大选 中资稀土铀矿项目危了](/articles/rfi/1032205.md)
 
 4-8 [身为亚裔在美遭歧视经验  韩国电竞选手：很可怕 – 法国国际广播电台 - RFI](/articles/rfi/1032206.md)
@@ -598,6 +600,4 @@
 3-31 [通膨隐忧、金融类股重挫 日股随美股收跌 – 法国国际广播电台 - RFI](/articles/rfi/1032502.md)
 
 3-31 [苏伊士运河南段拓宽避免再塞船？埃及排除可能性 – 法国国际广播电台 - RFI](/articles/rfi/1032503.md)
-
-3-31 [埃及总统允投资 避免运河再封闭 – 法国国际广播电台 - RFI](/articles/rfi/1032504.md)
 
