--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-9 [加拿大省长华裔顾问称维吾尔种族灭绝乃谎言     遭舆论抨击](/articles/rfa/1045918.md)
+
 4-9 [美黑名单新增七家中国实体   中国用美技术、台晶片研发武器](/articles/rfa/1045919.md)
 
 4-8 [旅美民运元老司马璐遗体告别仪式通过网络举行](/articles/rfa/1045920.md)
@@ -598,6 +600,4 @@
 3-4 [美国智库不再为香港经济自由度排名   势加剧走资潮](/articles/rfa/1046216.md)
 
 3-4 [拜登国家安全战略指南表态支持台湾  学者：温和而模糊](/articles/rfa/1046217.md)
-
-3-4 [政协报告 :“港人治港”、“高度自治”、“一国两制”全部消失](/articles/rfa/1046218.md)
 
