--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-9 [中国推动民众接种胡萝卜加大棒 民间吁请领导人伸出胳膊带头](/articles/rfi/1032196.md)
+
 4-9 [美国制裁缅甸国营宝石公司 切断军政府资金来源](/articles/rfi/1032197.md)
 
 4-9 [美参院提出对抗中国法案 呼吁强化与台湾伙伴关系](/articles/rfi/1032198.md)
@@ -598,6 +600,4 @@
 3-31 [阻中美洲移民涌入 美副总统感谢瓜地马拉管控边界 – 法国国际广播电台 - RFI](/articles/rfi/1032494.md)
 
 3-31 [尼日政变未遂  情势获控制 – 法国国际广播电台 - RFI](/articles/rfi/1032495.md)
-
-3-31 [亚股普遍收黑 – 法国国际广播电台 - RFI](/articles/rfi/1032496.md)
 
