--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-9 [台湾如何在44天内解除医院感染危机？](/articles/dw/1043078.md)
+
+4-9 [中菲岛屿争端升级 马尼拉联合美国因应](/articles/dw/1043079.md)
+
+4-9 [强化反制北京能力 美再推抗中法案](/articles/dw/1043080.md)
+
 4-8 [缅甸名模被捕 军政府通缉异议名人](/articles/dw/1043081.md)
 
 4-8 [疫情下的危机管理   台、英专家：信任是关键](/articles/dw/1043082.md)
@@ -594,10 +600,4 @@
 3-22 [欧盟委员：今夏群体免疫有希望](/articles/dw/1043376.md)
 
 3-22 [德语媒体：北京武力威胁越来越大 台湾人为何还这么镇定？](/articles/dw/1043377.md)
-
-3-22 [德意志帝国议会首次会议召开150年](/articles/dw/1043378.md)
-
-3-22 [再次“战狼附体”中国使馆称不搞“羔羊外交”](/articles/dw/1043379.md)
-
-3-22 [12港人案：8人出狱被移交香港司法](/articles/dw/1043380.md)
 
