--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-9 [纽约亚裔成立民间巡逻队保护社区](/articles/nyt/1046986.md)
+
+4-9 [简报：美国强势支持台湾；七家中国超级计算机公司被制裁](/articles/nyt/1046987.md)
+
 4-8 [拜登政府强势支持台湾，是时候放弃“战略模糊”了吗？](/articles/nyt/1046988.md)
 
 4-8 [在谷歌遭遇性骚扰后，我再也不会爱上一份工作](/articles/nyt/1046989.md)
@@ -596,8 +600,4 @@
 1-20 [简报：美称中国对维吾尔人种族灭绝；特朗普白宫最后一天](/articles/nyt/1047284.md)
 
 1-19 [别了，“特朗普美学”](/articles/nyt/1047285.md)
-
-1-19 [庞皮欧，美国“史上最糟糕国务卿”？](/articles/nyt/1047286.md)
-
-1-19 [香港残障运动员坐轮椅攀爬摩天大楼](/articles/nyt/1047287.md)
 
