--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-9 [从钱币历史看比特币的估值和未来](/articles/ft/1045781.md)
+
 4-8 [贝恩资本拟以80亿美元收购日立金属](/articles/ft/1045782.md)
 
 4-8 [韩反对党取得补选胜利 对朝接触政策生变数](/articles/ft/1045783.md)
@@ -598,6 +600,4 @@
 2-9 [非银行支付机构的企业账户：一个历史的螺旋](/articles/ft/1046079.md)
 
 2-9 [欧盟拟迫使谷歌等大型科技平台为新闻付费](/articles/ft/1046080.md)
-
-2-9 [欧洲三国驱逐俄罗斯外交官](/articles/ft/1046081.md)
 
