--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+4-9 [缅甸安全部队与反军政府示威者爆发血腥冲突 美国扩大制裁](/articles/reuters/1039537.md)
+
+4-9 [即时观点：中国3月CPI同比由负转正仍温和 PPI远超预期创逾两年半高位](/articles/reuters/1039538.md)
+
 4-9 [综述：美联储政策制定者警告称风险来自新增感染 而非暂时性价格上涨](/articles/reuters/1039539.md)
 
 4-9 [百度在美国赢得有关公司遵守中国互联网法规的诉讼](/articles/reuters/1039540.md)
@@ -596,8 +600,4 @@
 4-1 [焦点：英国敦促G7对中国采取强硬态度 否则将失去对国际贸易体系的控制](/articles/reuters/1039835.md)
 
 4-1 [焦点：OPEC+调低石油需求增长预估 并上调全球石油供应增长预测](/articles/reuters/1039836.md)
-
-4-1 [独家：中国考虑设立新证交所 吸引海外上市中企回流--消息人士](/articles/reuters/1039837.md)
-
-4-1 [字节跳动称印度当局冻结其银行账户致其“流血” 期待法庭做出裁决](/articles/reuters/1039838.md)
 
