--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-9 [重拍版美剧《功夫》：更贴近李小龙心意的功夫片？](/articles/nyt/1046981.md)
+
 4-9 [食道癌患者迎来治疗新方案，可使无病生存时间翻倍](/articles/nyt/1046982.md)
 
 4-9 [“拜登经济学”能赢过中国吗](/articles/nyt/1046983.md)
@@ -598,6 +600,4 @@
 1-20 [特朗普留给拜登一个被颠覆的世界](/articles/nyt/1047279.md)
 
 1-20 [美国总统就职典礼上的那些“第一次”](/articles/nyt/1047280.md)
-
-1-20 [梅拉尼娅的第一夫人生涯：自怜、公关灾难和缺席](/articles/nyt/1047281.md)
 
