--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-9 [印度封禁TikTok让印度短视频应用迎来春天](/articles/ft/1045777.md)
+
 4-9 [马克龙将关闭法国国家行政学院](/articles/ft/1045778.md)
 
 4-9 [后疫情外交：世界棋局中的中美欧俄复合三角关系](/articles/ft/1045779.md)
@@ -598,6 +600,4 @@
 2-10 [New Balance在华再度打赢商标案 获赔2500万元](/articles/ft/1046075.md)
 
 2-9 [英国警告：香港不再承认双重国籍](/articles/ft/1046076.md)
-
-2-9 [Robinhood限制交易事件的思考与启示](/articles/ft/1046077.md)
 
