--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-9 [全现在 | 3000万卡车司机的“黑匣子”困局](/articles/cdt/383979.md)
+
 4-9 [维舟 | 卡车司机之死](/articles/cdt/383980.md)
 
 4-9 [明明德 | 一个评论，新疆，棉花](/articles/cdt/383987.md)
@@ -598,6 +600,4 @@
 2-26 [极昼工作室｜举报者何思云，失败的特岗教师与成功的螺蛳粉微商](/articles/cdt/385515.md)
 
 2-26 [叫虱｜除了贬低美国，他为苍生说过话吗：致陈平00后铁粉](/articles/cdt/385522.md)
-
-2-26 [中国数字时代【敏感词日历】今日上线](/articles/cdt/385525.md)
 
