--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-9 [哈萨克族人热合江因间谍罪被囚13年  获释四年后抵哈国百人接机](/articles/rfa/1045909.md)
+
 4-9 [美日峰会前 中国躁动不安为台湾划红线](/articles/rfa/1045910.md)
 
 4-9 [辽宁新安镇65位公务员仅3人愿接种国产疫](/articles/rfa/1045911.md)
@@ -598,6 +600,4 @@
 3-5 [江西、山东全面放开落户限制](/articles/rfa/1046207.md)
 
 3-5 [竞争、合作也对抗   华盛顿与北京还能共舞乎？](/articles/rfa/1046208.md)
-
-3-5 [拜登罕见公布国安指南   中国是“最大地缘政治挑战”](/articles/rfa/1046209.md)
 
