--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,9 +1,15 @@
 中国数字时代
 ------
 
+4-9 [Weifeng Yang｜翻译：汉族人是中国的白人吗？](/articles/cdt/383973.md)
+
+4-9 [【图说天朝】寒假十课](/articles/cdt/383975.md)
+
 4-9 [全现在 | 3000万卡车司机的“黑匣子”困局](/articles/cdt/383979.md)
 
 4-9 [维舟 | 卡车司机之死](/articles/cdt/383980.md)
+
+4-9 [宋金波 | 金德强的生命之火这样熄灭，总要有人问个为什么](/articles/cdt/383981.md)
 
 4-9 [明明德 | 一个评论，新疆，棉花](/articles/cdt/383987.md)
 
@@ -594,10 +600,4 @@
 2-26 [【立此存照】四川一高校教师在网络发表不当言论，已停职接受调查](/articles/cdt/385509.md)
 
 2-26 [端传媒 | 专访有线中国组：三代记者，十九载悲喜，一种失落的情怀（节选）](/articles/cdt/385511.md)
-
-2-26 [【CDTV】Linus Tech Tips｜详解Steam中国专属版”蒸汽平台“](/articles/cdt/385514.md)
-
-2-26 [极昼工作室｜举报者何思云，失败的特岗教师与成功的螺蛳粉微商](/articles/cdt/385515.md)
-
-2-26 [叫虱｜除了贬低美国，他为苍生说过话吗：致陈平00后铁粉](/articles/cdt/385522.md)
 
