--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-9 [耐克阿迪被打马赛克 新疆棉争议如何收场？](/articles/dw/1043064.md)
+
 4-9 [德语媒体：抵制冬奥? 动机正确 手段错误](/articles/dw/1043065.md)
 
 4-9 [菲利普亲王辞世 与女王牵手走过大半世纪](/articles/dw/1043066.md)
@@ -598,6 +600,4 @@
 3-23 [媒体：阿富汗总统或不接受美国和平方案](/articles/dw/1043362.md)
 
 3-23 [聚焦遭中方制裁的欧盟个人与实体](/articles/dw/1043363.md)
-
-3-23 [美国威胁就北溪2号项目制裁德国](/articles/dw/1043364.md)
 
