--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-9 [专家：全球最大芯片代工厂扩大产能无法彻底缓解全球芯片短缺问题](/articles/voa/1041618.md)
+
 4-9 [中国富豪快速聚敛财富，大卡司机却为两千罚款服毒自杀](/articles/voa/1041619.md)
 
 4-9 [香港立法会质疑限制民众查阅公司资料安排 官员：平衡隐私及知情权](/articles/voa/1041620.md)
@@ -598,6 +600,4 @@
 3-29 [美国誓言要俄罗斯为其行动承担“后果”](/articles/voa/1041916.md)
 
 3-29 [华尔街日报专访戴琪：美国目前还没准备好取消对中国的进口关税](/articles/voa/1041917.md)
-
-3-29 [台湾总统蔡英文呼吁北京不要“放任”民间抵制潮](/articles/voa/1041918.md)
 
