--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-9 [西藏流亡政府改选前夕 西藏公布边境“十五禁”](/articles/rfa/1045908.md)
+
 4-9 [哈萨克族人热合江因间谍罪被囚13年  获释四年后抵哈国百人接机](/articles/rfa/1045909.md)
 
 4-9 [美日峰会前 中国躁动不安为台湾划红线](/articles/rfa/1045910.md)
@@ -598,6 +600,4 @@
 3-5 [内蒙将关停虚拟货币挖矿项目  比特币有麻烦了？](/articles/rfa/1046206.md)
 
 3-5 [江西、山东全面放开落户限制](/articles/rfa/1046207.md)
-
-3-5 [竞争、合作也对抗   华盛顿与北京还能共舞乎？](/articles/rfa/1046208.md)
 
